--- a/DXApplication1/DXApplication1.csproj
+++ b/DXApplication1/DXApplication1.csproj
@@ -107,6 +107,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReserveCode.cs" />
+    <Compile Include="FormERP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormERP.Designer.cs">
+      <DependentUpon>FormERP.cs</DependentUpon>
+    </Compile>
     <Compile Include="SqlMethods.cs" />
     <Compile Include="FormPayment.cs">
       <SubType>Form</SubType>
@@ -120,11 +126,20 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormInvoice.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormInvoice.Designer.cs">
+      <DependentUpon>FormInvoice.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FormChange.resx">
       <DependentUpon>FormChange.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormCustomer.resx">
       <DependentUpon>FormCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormInvoice.resx">
+      <DependentUpon>FormInvoice.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPos.resx">
       <DependentUpon>FormPos.cs</DependentUpon>
@@ -152,6 +167,9 @@
     </Compile>
     <EmbeddedResource Include="FormPayment.resx">
       <DependentUpon>FormPayment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormERP.resx">
+      <DependentUpon>FormERP.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
