--- a/DXApplication1/DXApplication1.csproj
+++ b/DXApplication1/DXApplication1.csproj
@@ -167,8 +167,17 @@
     <Compile Include="UcReturn.Designer.cs">
       <DependentUpon>UcReturn.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCurrAccList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCurrAccList.Designer.cs">
+      <DependentUpon>FormCurrAccList.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FormChange.resx">
       <DependentUpon>FormChange.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCurrAccList.resx">
+      <DependentUpon>FormCurrAccList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormCustomer.resx">
       <DependentUpon>FormCustomer.cs</DependentUpon>
