--- a/DXApplication1/DXApplication1.csproj
+++ b/DXApplication1/DXApplication1.csproj
@@ -84,6 +84,12 @@
     <Compile Include="FormCustomer.Designer.cs">
       <DependentUpon>FormCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormInvoiceHeaderList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormInvoiceHeaderList.Designer.cs">
+      <DependentUpon>FormInvoiceHeaderList.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormPosDiscount.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -189,6 +195,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormInvoice.resx">
       <DependentUpon>FormInvoice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormInvoiceHeaderList.resx">
+      <DependentUpon>FormInvoiceHeaderList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPosDiscount.resx">
       <DependentUpon>FormPosDiscount.cs</DependentUpon>
