Changed namespace name from DXApplication1 to PointOfSale

--- a/DXApplication1/App.config
+++ b/DXApplication1/App.config
@@ -6,7 +6,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DXApplication1.Properties.Settings.subConnString"
+    <add name="PointOfSale.Properties.Settings.subConnString"
       connectionString="Data Source=DESKTOP-DD8RVOA\SUBSQL;Initial Catalog=suba;Persist Security Info=True;User ID=sa;Password=sql123_"
       providerName="System.Data.SqlClient" />
     <add name="subConnString" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-DD8RVOA\SUBSQL;user id=sa;password=sql123_;initial catalog=sub;Persist Security Info=true" />
