--- a/DXApplication1/App.config
+++ b/DXApplication1/App.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
@@ -6,10 +6,9 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="PointOfSale.Properties.Settings.subConnString" connectionString="Data Source=DESKTOP-DD8RVOA\SUBSQL;Initial Catalog=sub;Persist Security Info=True;User ID=sa;Password=sql123_"
-      providerName="System.Data.SqlClient" />
+    <add name="PointOfSale.Properties.Settings.subConnString" connectionString="Data Source=DESKTOP-DD8RVOA\SUBSQL;Initial Catalog=sub;Persist Security Info=True;User ID=sa;Password=sql123_" providerName="System.Data.SqlClient" />
     <add name="subConnString" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-DD8RVOA\SUBSQL;user id=sa;password=sql123_;initial catalog=sub;Persist Security Info=true" />
-  </connectionStrings>
+  <add name="efConString" connectionString="data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DPIAwarenessMode" serializeAs="String">
