--- a/DXApplication1/PointOfSale.csproj
+++ b/DXApplication1/PointOfSale.csproj
@@ -67,6 +67,12 @@
     <Reference Include="DevExpress.XtraNavBar.v20.1, Version=20.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraPrinting.v20.1, Version=20.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraWizard.v20.1, Version=20.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -87,6 +93,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppCode\Extensions.cs" />
+    <Compile Include="Migrations\202109201727536_initial.cs" />
+    <Compile Include="Migrations\202109201727536_initial.Designer.cs">
+      <DependentUpon>202109201727536_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Entity\dcCurrAcc.cs" />
+    <Compile Include="Models\Entity\dcCurrAccType.cs" />
+    <Compile Include="Models\Entity\dcOffice.cs" />
+    <Compile Include="Models\Entity\dcPaymentType.cs" />
+    <Compile Include="Models\Entity\dcProcess.cs" />
+    <Compile Include="Models\Entity\dcProduct.cs" />
+    <Compile Include="Models\Entity\dcProductType.cs" />
+    <Compile Include="Models\Entity\dcStore.cs" />
+    <Compile Include="Models\Entity\dcTerminal.cs" />
+    <Compile Include="Models\Entity\dcWarehouse.cs" />
     <Compile Include="FormChange.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,13 +150,7 @@
     <Compile Include="FormTransfer.Designer.cs">
       <DependentUpon>FormTransfer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\dcCurrAcc.cs" />
-    <Compile Include="Model\dcPaymentType.cs" />
-    <Compile Include="Model\dcProduct.cs" />
-    <Compile Include="Model\trInvoiceHeader.cs" />
-    <Compile Include="Model\trInvoiceLine.cs" />
-    <Compile Include="Model\trPaymentHeader.cs" />
-    <Compile Include="Model\trPaymentLine.cs" />
+    <Compile Include="Models\Context\dbContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReserveCode.cs" />
@@ -181,6 +196,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>subDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Models\sysdiagram.cs" />
+    <Compile Include="Models\Entity\trInvoiceHeader.cs" />
+    <Compile Include="Models\Entity\trInvoiceLine.cs" />
+    <Compile Include="Models\Entity\trPaymentHeader.cs" />
+    <Compile Include="Models\Entity\trPaymentLine.cs" />
+    <Compile Include="Models\Entity\trShipmentHeader.cs" />
+    <Compile Include="Models\Entity\trShipmentLine.cs" />
     <Compile Include="UcSale.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -230,6 +252,9 @@
     <EmbeddedResource Include="FormTransfer.resx">
       <DependentUpon>FormTransfer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109201727536_initial.resx">
+      <DependentUpon>202109201727536_initial.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -260,6 +285,7 @@
       <DependentUpon>UcReturn.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -328,6 +354,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\ViewModel\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
