POS functions adapted Entity framwork crud methods

--- a/DXApplication1/App.config
+++ b/DXApplication1/App.config
@@ -4,11 +4,16 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
       <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <add name="PointOfSale.Properties.Settings.subConnString" connectionString="Data Source=DESKTOP-DD8RVOA\SUBSQL;Initial Catalog=sub;Persist Security Info=True;User ID=sa;Password=sql123_" providerName="System.Data.SqlClient" />
     <add name="subConnString" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-DD8RVOA\SUBSQL;user id=sa;password=sql123_;initial catalog=sub;Persist Security Info=true" />
-  <add name="efConString" connectionString="data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="efConString" connectionString="data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="subEntities" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="subEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DPIAwarenessMode" serializeAs="String">
@@ -70,4 +75,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
