--- a/DXApplication1/PointOfSale.csproj
+++ b/DXApplication1/PointOfSale.csproj
@@ -52,6 +52,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
     <Reference Include="DevExpress.BonusSkins.v20.1" />
@@ -71,14 +74,8 @@
     <Reference Include="DevExpress.XtraNavBar.v20.1, Version=20.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraPrinting.v20.1, Version=20.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraWizard.v20.1, Version=20.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.1\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Bcl.HashCode, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.HashCode.1.1.1\lib\net461\Microsoft.Bcl.HashCode.dll</HintPath>
@@ -344,7 +341,16 @@
     <Compile Include="Migrations\20210926070206_test22.designer.cs">
       <DependentUpon>20210926070206_test22.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20210926195958_curracccode.HasData.cs" />
+    <Compile Include="Migrations\20210926195958_curracccode.HasData.designer.cs">
+      <DependentUpon>20210926195958_curracccode.HasData.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20210926200816_curracccode.HasData2.cs" />
+    <Compile Include="Migrations\20210926200816_curracccode.HasData2.designer.cs">
+      <DependentUpon>20210926200816_curracccode.HasData2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\subContextModelSnapshot.cs" />
+    <Compile Include="Models\Context\subContext.cs" />
     <Compile Include="Models\Entity\DcCurrAccs.cs" />
     <Compile Include="Models\Entity\DcCurrAccType.cs" />
     <Compile Include="Models\Entity\DcOffice.cs" />
@@ -356,14 +362,13 @@
     <Compile Include="Models\Entity\DcTerminal.cs" />
     <Compile Include="Models\Entity\DcWarehouse.cs" />
     <Compile Include="Models\Entity\MigrationHistory.cs" />
-    <Compile Include="Models\Context\subContext.cs" />
-    <Compile Include="Models\Sysdiagrams.cs" />
     <Compile Include="Models\Entity\TrInvoiceHeader.cs" />
     <Compile Include="Models\Entity\TrInvoiceLine.cs" />
     <Compile Include="Models\Entity\TrPaymentHeader.cs" />
     <Compile Include="Models\Entity\TrPaymentLine.cs" />
     <Compile Include="Models\Entity\TrShipmentHeader.cs" />
     <Compile Include="Models\Entity\TrShipmentLine.cs" />
+    <Compile Include="Models\Sysdiagrams.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReserveCode.cs" />
