--- a/DXApplication1/App.config
+++ b/DXApplication1/App.config
@@ -8,11 +8,15 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="PointOfSale.Properties.Settings.subConnString" connectionString="Data Source=DESKTOP-DD8RVOA\SUBSQL;Initial Catalog=sub;Persist Security Info=True;User ID=sa;Password=sql123_" providerName="System.Data.SqlClient" />
+    <add name="PointOfSale.Properties.Settings.subConnString" connectionString="Data Source=.\SUBSQL;Initial Catalog=sub;Persist Security Info=True;User ID=sa;Password=sql123_"
+      providerName="System.Data.SqlClient" />
     <add name="subConnString" connectionString="XpoProvider=MSSqlServer;data source=DESKTOP-DD8RVOA\SUBSQL;user id=sa;password=sql123_;initial catalog=sub;Persist Security Info=true" />
-    <add name="efConString" connectionString="data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="subEntities" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="subEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="efConString" connectionString="data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="subEntities" connectionString="metadata=res://*/Model2.csdl|res://*/Model2.ssdl|res://*/Model2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="subEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DD8RVOA\SUBSQL;initial catalog=sub;persist security info=True;user id=sa;password=sql123_;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
   </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
