--- a/DXApplication1/PointOfSale.csproj
+++ b/DXApplication1/PointOfSale.csproj
@@ -257,8 +257,45 @@
     <Compile Include="Migrations\20211002184541_initial.designer.cs">
       <DependentUpon>20211002184541_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20211004113432_test01.cs" />
+    <Compile Include="Migrations\20211004113432_test01.designer.cs">
+      <DependentUpon>20211004113432_test01.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20211004113536_test1.cs" />
+    <Compile Include="Migrations\20211004113536_test1.designer.cs">
+      <DependentUpon>20211004113536_test1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20211004114513_test5.cs" />
+    <Compile Include="Migrations\20211004114513_test5.designer.cs">
+      <DependentUpon>20211004114513_test5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20211004114544_test6.cs" />
+    <Compile Include="Migrations\20211004114544_test6.designer.cs">
+      <DependentUpon>20211004114544_test6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20211004114626_test7.cs" />
+    <Compile Include="Migrations\20211004114626_test7.designer.cs">
+      <DependentUpon>20211004114626_test7.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20211004114750_test8.cs" />
+    <Compile Include="Migrations\20211004114750_test8.designer.cs">
+      <DependentUpon>20211004114750_test8.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20211004114834_test9.cs" />
+    <Compile Include="Migrations\20211004114834_test9.designer.cs">
+      <DependentUpon>20211004114834_test9.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20211004114935_test10.cs" />
+    <Compile Include="Migrations\20211004114935_test10.designer.cs">
+      <DependentUpon>20211004114935_test10.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20211004115148_test11.cs" />
+    <Compile Include="Migrations\20211004115148_test11.designer.cs">
+      <DependentUpon>20211004115148_test11.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\subContextModelSnapshot.cs" />
     <Compile Include="Models\Context\subContext.cs" />
+    <Compile Include="Models\Entity\BaseEntity.cs" />
     <Compile Include="Models\Entity\DcCurrAccs.cs" />
     <Compile Include="Models\Entity\DcCurrAccType.cs" />
     <Compile Include="Models\Entity\DcOffice.cs" />
